--- a/neon/backends/kernels/sass/xconv_winograd_4x4_3x3_32x32.sass
+++ b/neon/backends/kernels/sass/xconv_winograd_4x4_3x3_32x32.sass
@@ -155,7 +155,7 @@ sub vsize  { return $vsize;  }
       82,83,84,85,86,60 : F<0-5>5
 
       32-39 ~ partialC, idx_K, idx_Y, idx_X
-      40-86 ~ idx_KYXk, idx_YXk, idx_Xk, idx_k, idx_Y2, idx_X2, div<1-3>, magic_YXk, negYXk, magic_Xk, negXk, tid32_2, tid1, tid31, gx, gy, c, kk, offset, sign, idx_N, nn, x<1-5>, mask_x, super_x, super_y
+      40-86 ~ idx_KYXk, idx_YXk, idx_Xk, idx_k, idx_Y2, idx_X2, div<1-3>, magic_YXk, negYXk, magic_Xk, negXk, tid32_2, tid1, tid31, gx, gy, c, kk, offset, sign, idx_N, nn, x<1-5>, mask_x, super_x, super_y, partC
 
       32-39 : shuffle16_x<0-3>y0, shuffle16_x<0-3>y1
       48-91 ~ Tid, Tid1, Tid32_2, write16Cs, alpha16
@@ -428,9 +428,9 @@ IMAGE_SETUP:
 // P6 = c == partialC == 1
 --:-:-:-:1      ISETP.EQ.AND P6, PT, c, 1, PT;
 --:-:-:-:1      ISETP.EQ.AND P6, PT, c, partialC, P6;
---:-:-:-:1      XMAD partialC, partialC, param_YXN, RZ;
+--:-:-:-:1      XMAD     partC,    partialC, param_YXN,       RZ;
+--:-:-:-:1      XMAD.PSL partialC, partialC, param_YXN.H1, partC;
 --:-:-:-:1      SHL  partialC, partialC, [+ dshift() +];
-
 
 --:-:-:-:1 @!P6 R2P PR, pred30, 0x3f;
 --:-:-:-:1  @P6 R2P PR,     RZ, 0x3f;
@@ -549,7 +549,8 @@ FILTER_SETUP:
 // P6 = c == partialC == 1
 --:-:-:-:1      ISETP.EQ.AND P6, PT, c, 1, PT;
 --:-:-:-:1      ISETP.EQ.AND P6, PT, c, partialC, P6;
---:-:-:-:1      XMAD partialC, partialC, param_RSK, RZ;
+--:-:-:-:1      XMAD     partC,    partialC, param_RSK, RZ;
+--:-:-:-:1      XMAD.PSL partialC, partialC, param_RSK.H1, partC;
 --:-:-:-:1      SHL  partialC, partialC, [+ dshift() +];
 
 // k = idx_K*32 + tid & 31
